Make CORS allowed origin configurable via properties
Added ui.host and ui.port to application.yaml and AppProperties to allow dynamic configuration of allowed CORS origins. SecurityConfig now uses these properties to set allowedOrigins, replacing the hardcoded localhost value.